vitalsync/backend/k8/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-backend-service
  namespace: vitalsync
spec:
  type: ClusterIP
  selector:
    app: pg-db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
