vitalsync/backend/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "api-ingress"
  namespace: default
  annotations:
    description: "This is a sample Ingress manifest for the mon-api application."

spec:
  rules:
    - host: "vitalsync.local"
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
    - host: "vitalsync.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
